force-app/main/default/objects/SFDC_Salary_History__c/SFDC_Salary_History__c.object-meta.xml
<CustomObject>
    <label>Salary History</label>
    <nameField>
        <displayFormat>SAL-{00000}</displayFormat>
        <label>Salary History #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salary History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>