force-app/main/default/objects/SFDC_Salary_History__c/fields/Annual_OTE__c.field-meta.xml
<CustomField>
    <fullName>Annual_OTE__c</fullName>
    <label>Annual OTE</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>