force-app/main/default/objects/SFDC_Salary_History__c/fields/Base_Salary__c.field-meta.xml
<CustomField>
    <fullName>Base_Salary__c</fullName>
    <label>Base Salary</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>