force-app/main/default/objects/SFDC_Salary_History__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>SFDC_Employee__c</referenceTo>
    <relationshipLabel>Salary History</relationshipLabel>
    <relationshipName>R00N30000001eUPwEAM</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>