force-app/main/default/objects/SFDC_Salary_History__c/fields/Quarterly_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Bonus__c</fullName>
    <formula>(Annual_OTE__c - Base_Salary__c ) / 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarterly Bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>