force-app/main/default/objects/SFDC_Salary_History__c/fields/Salary_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Salary_End_Date__c</fullName>
    <label>Salary End Date</label>
    <type>Date</type>
</CustomField>